[package]
name = "rcgb"
version = "0.1.0"
authors = ["dryack <dave.ryack@gmail.com>"]
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.2"
iota =  "0.2.2"

[target.'cfg(unix)'.dependencies]
libc = "0.2.95"

[target.'cfg(windows)'.dependencies]
atty = "0.2.14"